Prevent text overflow in episode description view (#6)

--- a/friends_app/static/css/styles.css
+++ b/friends_app/static/css/styles.css
@@ -120,6 +120,8 @@ body {
     font-size: 15px;
     width: 400px;
     margin: 0;
+    max-height: 135px;
+    overflow-y: scroll;
 }
 
 #episode-image {
